Game logic working, just missing player image

--- a/Sokoban.html
+++ b/Sokoban.html
@@ -7,14 +7,16 @@
 
 </head>
 <body>
-    <h1>  Title of my page!</h1>
+    <h1>Sokoban game!</h1>
 
     <div id="map"></div>
     
-    <p id="demo"></p>
+    <p id="demo"></p>'
 
 
-
+    <footer>
+        <span>&copy; Albin de Val</span>
+    </footer>
 </body>
 <script src="JS/SokobanBase.js"></script>
 <script src="./JS/SokobanCodeJS.js"></script>
